fixed some responsiveness errors on iPhone SE

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -645,14 +645,14 @@ input:focus::placeholder, textarea:focus::placeholder {
 
 
     h1 {
-      font-size: 3rem;
+      font-size: 3.4rem;
     }
     h2 {
-      font-size: 2.2rem;
+      font-size: 2.5rem;
       text-align: center;
     }
     h3 {
-      font-size: 1.6rem;
+      font-size: 2rem;
     }
     
     p {
@@ -719,10 +719,25 @@ input:focus::placeholder, textarea:focus::placeholder {
     }
 
 
-  /******************************************
-  /* FOOTER
+     /******************************************
+  /* ABOUT
   /*******************************************/
-    
+    .profile-image img {
+      width: 230px;
+    }
+
+
+
+
+
+  /******************************************
+  /* FORM
+  /*******************************************/
+    .input-area input, textarea {
+      font-size: 1.5rem;
+    }
+ 
+
 }
 
 
